--- a/css/section2.css
+++ b/css/section2.css
@@ -1,69 +1,118 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap");
 
 * {
-    font-family: 'Prompt', sans-serif;
+  font-family: "Prompt", sans-serif;
 }
-body{
-    margin: auto;
+body {
+  margin: auto;
 }
 .sec-2 {
-    color: aliceblue;
-    padding-top: 10%;
-    position: relative;
-    padding-bottom: 30%;
-    overflow: hidden;
-    background-color: #1E1E1E;
-    
+  color: aliceblue;
+  padding-top: 10%;
+  position: relative;
+  padding-bottom: 30%;
+  overflow: hidden;
+  background-color: #1e1e1e;
 }
 
 .sec-2 .titleBurrowing {
-    overflow: hidden;
-    text-align: center;
+  overflow: hidden;
+  text-align: center;
 }
-
+/* 
 .sec-2 h3 {
-    font-size: 32px;
-    margin-bottom: 24px;
-    padding: 0;
-    background-color: transparent;
+  font-size: 32px;
+  margin-bottom: 24px;
+  padding: 0;
+  background-color: transparent;
 }
 
 .sec-2 img {
-    margin: 0;
-    margin-bottom: 24px;
-    background-color: transparent;
-    width: 880px;
+  margin: 0;
+  margin-bottom: 24px;
+  background-color: transparent;
+  width: 880px;
 }
 
 .sec-2 p {
-    width: 860px;
-    margin: auto;
-    font-size: 20px;
-    background-color: transparent;
+  width: 860px;
+  margin: auto;
+  font-size: 20px;
+  background-color: transparent;
 }
-.bag{
-    position: absolute;
-    right: -8%;
-    top: 10%;
+.bag {
+  position: absolute;
+  right: -8%;
+  top: 10%;
 }
-.bag img{
-    width: 250px;
+.bag img {
+  width: 250px;
 }
-.hanger{
-    position: absolute;
-    left: -8%;
-    top: 30%;
+.hanger {
+  position: absolute;
+  left: -8%;
+  top: 40%;
 }
-.hanger img{
-    width: 450px;
+.hanger img {
+  width: 450px;
 }
 .search {
-    position: absolute;
-    right: 15%;
-    z-index: 1;
-
+  position: absolute;
+  right: 15%;
+  z-index: 1;
 }
 .search img {
-    width: 300px;
+  width: 300px;
+} */
+/* -------- px to vw -------- */
+
+.sec-2 h3 {
+  font-size: 2.34vw; /* Converted from 32px (32 / 1366 * 100) */
+  margin-bottom: 1.76vw; /* Converted from 24px */
+  padding: 0;
+  background-color: transparent;
 }
 
+.sec-2 img {
+  margin: 0;
+  margin-bottom: 1.76vw; /* Converted from 24px */
+  background-color: transparent;
+  width: 64.58vw; /* Converted from 880px */
+}
+
+.sec-2 p {
+  width: 63.09vw; /* Converted from 860px */
+  margin: auto;
+  font-size: 1.6vw; /* Converted from 20px */
+  background-color: transparent;
+}
+
+.bag {
+  position: absolute;
+  right: -6.45vw; /* Converted from -8% */
+  top: 6vw;
+}
+
+.bag img {
+  width: 18.38vw; /* Converted from 250px */
+}
+
+.hanger {
+  position: absolute;
+  left: -10vw; /* Converted from -8% */
+  top: 26vw; /* Converted from 40% */
+}
+
+.hanger img {
+  width: 33.01vw; /* Converted from 450px */
+}
+
+.search {
+  position: absolute;
+  right: 11.02vw; /* Converted from 15% */
+  z-index: 1;
+}
+
+.search img {
+  width: 22.02vw; /* Converted from 300px */
+}
