--- a/css/section5.css
+++ b/css/section5.css
@@ -1,127 +1,129 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap');
-*{
-    font-family: 'Prompt', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap");
+* {
+  font-family: "Prompt", sans-serif;
 }
-body{
-    margin: auto;
+body {
+  margin: auto;
 }
-.sec-5{
-    background-image: linear-gradient(#79A3B3, #8C9592,#1A0F2F);
-    height: 160vh;
-    margin-bottom: 0;
-    padding-bottom: 0;
-    width: 100%;
-}
-
-.sec-5 .sec-5-text{
-    padding-top: 170px;
-}
-.sec-5-text1 p{
-    text-align: center;
-    font-size: 100px;
-    color: #fff;
-    font-weight:900;
-    margin: auto;
-    padding: 0;
-    line-height:80px;
-}
-.sec-5-text2 p{
-    text-align: center;
-    font-size: 60px;
-    color: #fff;
-    font-weight: bold;
-    margin: auto;
-    padding: 0;
+.sec-5 {
+  background-image: linear-gradient(#79a3b3, #8c9592, #1a0f2f);
+  height: 160vh;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  width: 100%;
 }
 
-
-.group{
-    height: auto;
-    position: relative;
+.sec-5 .sec-5-text {
+  padding-top: 170px;
 }
-.group .parallax{
-    position: absolute;
+.sec-5-text1 p {
+  text-align: center;
+  /* font-size: 100px; */
+  font-size: 7.321vw;
+  color: #fff;
+  font-weight: 900;
+  margin: auto;
+  padding: 0;
+  /* line-height: 80px; */
+  line-height: 5.857vw;
 }
-.parallax img{
+.sec-5-text2 p {
+  text-align: center;
+  /* font-size: 60px; */
+  font-size: 4.392vw;
+  color: #fff;
+  font-weight: bold;
+  margin: auto;
+  padding: 0;
+}
 
-    width: 100vw;
-    height: 100%;
+.group {
+  height: auto;
+  position: relative;
+}
+.group .parallax {
+  position: absolute;
+}
+.parallax img {
+  width: 100vw;
+  height: 100%;
 }
 .container {
-    height: 5000px; /* Altezza estesa */
-    max-width: 1200px;
-    margin: 0 auto;
-    transform-origin: center center;
-    background-color: #F2F2F2;
-  }
-  
-
-.banner{
-    opacity: 0;
-    text-align: left;
-    border-radius: 20px;
-    background: #FFF;
-    overflow: hidden;
-    position: absolute;
-    z-index: 90;
-    flex-shrink: 0;
-    padding: 20px;
-}
-.banner-head{
-    color: #000;
-    font-family: Prompt;
-    font-size: 28px;
-    font-weight: 400;
-    margin: 0 0 6px 0;
-}
-.banner-text{
-    color: #000;
-    font-family: Prompt;
-    font-size: 14px;
-    font-weight: 400;
-    margin: 0;
-    line-height: normal;
-}
-#sec5-1{
-    top: 28%;
-    left: 35%;
-   
-}
-#sec5-2{
-    top: 10%;
-    left: 62%;
-   
-}
-#sec5-3{
-    top: 28%;
-    left: 40%;
-  
-}
-#sec5-4{
-    top: 54%;
-    left: 40%;
-}
-#sec5-5{
-    top: 54%;
-    left: 44%;
+  height: 5000px; /* Altezza estesa */
+  max-width: 1200px;
+  margin: 0 auto;
+  transform-origin: center center;
+  background-color: #f2f2f2;
 }
 
-.sec-5-div .sec-5-bg{
-    position: absolute;
-    margin-top: 220%;
-    z-index: 1;
+.banner {
+  opacity: 0;
+  text-align: left;
+  /* border-radius: 20px; */
+  border-radius: 1.464vw;
+  background: #fff;
+  overflow: hidden;
+  position: absolute;
+  z-index: 90;
+  flex-shrink: 0;
+  /* padding: 20px; */
+  padding: 1.464vw;
+}
+.banner-head {
+  color: #000;
+  font-family: Prompt;
+  /* font-size: 28px; */
+  font-size: 2.05vw;
+  font-weight: 400;
+  margin: 0 0 6px 0;
+}
+.banner-text {
+  color: #000;
+  font-family: Prompt;
+  /* font-size: 14px; */
+  font-size: 1.025vw;
+  font-weight: 400;
+  margin: 0;
+  line-height: normal;
+}
+#sec5-1 {
+  top: 28%;
+  left: 35%;
+}
+#sec5-2 {
+  top: 10%;
+  left: 62%;
+}
+#sec5-3 {
+  top: 28%;
+  left: 40%;
+}
+#sec5-4 {
+  top: 54%;
+  left: 40%;
+}
+#sec5-5 {
+  top: 54%;
+  left: 44%;
 }
 
-.sec-5 .sec-5-title{
-    padding-top: 850px;
-    z-index: 2;
-    align-items: center;
-    position: relative;
+.sec-5-div .sec-5-bg {
+  position: absolute;
+  margin-top: 220%;
+  z-index: 1;
 }
-.sec-5-title p{
-    text-align: center;
-    font-size: 100px;
-    color: #fff;
-    font-weight:900;
-    z-index: 2;
+
+.sec-5 .sec-5-title {
+  padding-top: 850px;
+  z-index: 2;
+  align-items: center;
+  position: relative;
+}
+.sec-5-title p {
+  text-align: center;
+  /* font-size: 100px; */
+  font-size: 7.321vw;
+  color: #fff;
+  font-weight: 900;
+  z-index: 2;
 }
