--- a/css/section6.css
+++ b/css/section6.css
@@ -1,215 +1,235 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap');
-*{
-    font-family: 'Prompt', sans-serif;
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap");
+* {
+  font-family: "Prompt", sans-serif;
 }
-body{
-    margin: auto;
+body {
+  margin: auto;
 }
-.sec-6{
-    background-color: #1E1E1E;
-    height: 300vh;
+.sec-6 {
+  background-color: #1e1e1e;
+  /* height: 300vh; */
+  height: 230vh;
 }
-.sec-6 .sec-6-title{
-    padding-top: 850px;
-    align-items: center;
-    position: relative;
-    z-index: 6;
+.sec-6 .sec-6-title {
+  padding-top: 850px;
+  align-items: center;
+  position: relative;
+  z-index: 6;
 }
-.sec-6-title p{
-    text-align: center;
-    font-size: 100px;
-    color: #fff;
-    font-weight:900;
-    z-index: 6;
-    text-shadow: -2px 2px 0 #000,
-    2px 2px 0 #000,
-    2px -2px 0 #000,
+.sec-6-title p {
+  text-align: center;
+  /* font-size: 100px; */
+  font-size: 7.321vw;
+  color: #fff;
+  font-weight: 900;
+  z-index: 6;
+  text-shadow: -2px 2px 0 #000, 2px 2px 0 #000, 2px -2px 0 #000,
     -2px -2px 0 #000;
 }
 
-
-
-.sec-6-group .clock-1{
-    margin-top: -79%;
-    margin-left: 27%;
-    position: absolute;
-    z-index: 2;
+.sec-6-group .clock-1 {
+  margin-top: -79%;
+  margin-left: 27%;
+  position: absolute;
+  z-index: 2;
 }
-.clock-1 img{
-    width: 350px;
+.clock-1 img {
+  width: 350px;
 }
 
-.sec-6-group .clock-2{
-    margin-top: -87%;
-    margin-left: 32%;
-    position: absolute;
-    z-index: 2;
+.sec-6-group .clock-2 {
+  margin-top: -87%;
+  margin-left: 32%;
+  position: absolute;
+  z-index: 2;
 }
-.clock-2 img{
-    width: 300px;
-}
-
-.sec-6-group .clock-3{
-    margin-top: -84%;
-    margin-left: 45%;
-    position: absolute;
-    z-index: 2;
-}
-.clock-3 img{
-    width: 300px;
+.clock-2 img {
+  width: 300px;
 }
 
-.sec-6-group .clock-4{
-    margin-top: -68%;
-    margin-left: 28%;
-    position: absolute;
-    z-index: 2;
+.sec-6-group .clock-3 {
+  margin-top: -84%;
+  margin-left: 45%;
+  position: absolute;
+  z-index: 2;
 }
-.clock-4 img{
-    width: 540px;
-}
-
-.sec-6-group .shirt-orange{
-    margin-top: -70%;
-    margin-left: 55%;
-    position: absolute;
-    z-index: 3;
+.clock-3 img {
+  width: 300px;
 }
 
-.shirt-orange img{
-    width: 230px;
+.sec-6-group .clock-4 {
+  margin-top: -68%;
+  margin-left: 28%;
+  position: absolute;
+  z-index: 2;
+}
+.clock-4 img {
+  width: 540px;
 }
 
-.sec-6-group .g04_woman{
-    margin-top: -78%;
-    margin-left: 30%;
-    position: absolute;
-    z-index: 3;
+.sec-6-group .shirt-orange {
+  margin-top: -70%;
+  margin-left: 55%;
+  position: absolute;
+  z-index: 3;
 }
 
-.g04_woman img{
-    width: 750px;
+.shirt-orange img {
+  width: 230px;
 }
 
-.sec-6-group .g05_paper{
-    margin-top: -60%;
-    margin-left: 27%;
-    position: absolute;
-    z-index: 5;
+.sec-6-group .g04_woman {
+  margin-top: -78%;
+  margin-left: 30%;
+  position: absolute;
+  z-index: 3;
 }
 
-.g05_paper img{
-    width: 350px;
+.g04_woman img {
+  width: 750px;
 }
 
-.all_woman .woman_red{
-    margin-top: -25%;
-    margin-left: 30%;
-    position: absolute;
-    z-index: 6;
-}
-.woman_red img{
-    width: 540px;
+.sec-6-group .g05_paper {
+  margin-top: -60%;
+  margin-left: 27%;
+  position: absolute;
+  z-index: 5;
 }
 
-.all_woman .woman_original{
-    margin-top: -17%;
-    margin-left: 15%;
-    position: absolute;
-    z-index: 6;
-}
-.woman_original img{
-    width: 544px;
+.g05_paper img {
+  width: 350px;
 }
 
-.all_woman .woman_red2{
-    margin-top: -9%;
-    margin-left: 0%;
-    position: absolute;
-    z-index: 6;
+.all_woman .woman_red {
+  margin-top: -25%;
+  margin-left: 30%;
+  position: absolute;
+  z-index: 6;
 }
-.woman_red2 img{
-    width: 544px;
-}
-
-.sec-6 .sec-6-title2{
-    margin-top: 80px;
-    margin-left: 5%;
-    position: absolute;
-    z-index: 7;
-}
-.sec-6-title2 p{
-    padding:0;
-    margin: 0;
-    line-height: 100px;
-    font-size: 100px;
-    color: #fff;
-    font-weight:900;
-    z-index: 7;
-    text-shadow: -2px 2px 0 #000,
-        2px 2px 0 #000,
-        2px -2px 0 #000,
-        -2px -2px 0 #000;
+.woman_red img {
+  width: 540px;
 }
 
-.slide .banner_slide{
-    opacity: 1;
-    text-align: left;
-    border-radius: 20px;
-    background: #FFF;
-    overflow: hidden;
-    position: absolute;
-    z-index: 90;
-    flex-shrink: 0;
-    padding: 20px;
-    z-index: 7;
+.all_woman .woman_original {
+  margin-top: -17%;
+  margin-left: 15%;
+  position: absolute;
+  z-index: 6;
 }
-.banner_title{
-    color: #000;
-    font-family: Prompt;
-    font-size: 40px;
-    font-weight: 400;
-    margin: 0 0 6px 0;
-    z-index: 7;
+.woman_original img {
+  width: 544px;
 }
-.banner_describe{
-    color: #000;
-    font-family: Prompt;
-    font-size: 24px;
-    font-weight: 400;
-    margin: 0;
-    line-height: normal;
-    z-index: 7;
+
+.all_woman .woman_red2 {
+  margin-top: -9%;
+  margin-left: 0%;
+  position: absolute;
+  z-index: 6;
 }
-#sec6-1{
-    top: 40%;
-    left: 62%;
+.woman_red2 img {
+  width: 544px;
 }
-#sec6-2{
-    top: 51%;
-    left: 62%;
+
+.sec-6 .sec-6-title2 {
+  margin-top: 80px;
+  margin-left: 5%;
+  position: absolute;
+  z-index: 7;
 }
-#sec6-3{
-    top: 62%;
-    left: 62%;
+.sec-6-title2 p {
+  padding: 0;
+  margin: 0;
+  line-height: 100px;
+  /* font-size: 100px; */
+  font-size: 7.321vw;
+  color: #fff;
+  font-weight: 900;
+  z-index: 7;
+  text-shadow: -2px 2px 0 #000, 2px 2px 0 #000, 2px -2px 0 #000,
+    -2px -2px 0 #000;
 }
-#sec6-4{
-    top: 73%;
-    left: 62%;
+
+.slide .banner_slide {
+  opacity: 1;
+  text-align: left;
+  /* border-radius: 20px; */
+  border-radius: 1.464vw;
+  background: #fff;
+  overflow: hidden;
+  /* position: absolute; */
+  z-index: 90;
+  flex-shrink: 0;
+  /* padding: 20px; */
+  padding: 1.464vw;
+  z-index: 7;
+  margin-bottom: 16px;
 }
-#sec6-5{
-    top: 84%;
-    left: 62%;
+.banner_title {
+  color: #000;
+  font-family: Prompt;
+  /* font-size: 40px; */
+  font-size: 2.928vw;
+  font-weight: 400;
+  margin: 0 0 6px 0;
+  z-index: 7;
 }
-#sec6-6{
-    top: 95%;
-    left: 62%;
+.banner_describe {
+  color: #000;
+  font-family: Prompt;
+  /* font-size: 24px; */
+  font-size: 1.757vw;
+  font-weight: 400;
+  margin: 0;
+  line-height: normal;
+  z-index: 7;
 }
-.sec-6-div .sec-6-bg{
-    position: absolute;
-    margin-top: 80%;
-    z-index: 2;
+.slide {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  flex-wrap: wrap;
+  margin-right: 2%;
+  /* align-items: center; */
 }
-.sec-6-bg img{
-    width: full;
+/*
+#sec6-1 {
+  top: 40%;
+  left: 62%;
+}
+#sec6-2 {
+  top: 51%;
+  left: 62%;
+}
+#sec6-3 {
+  top: 62%;
+  left: 62%;
+}
+#sec6-4 {
+  top: 73%;
+  left: 62%;
+}
+#sec6-5 {
+  top: 84%;
+  left: 62%;
+}
+#sec6-6 {
+  top: 95%;
+  left: 62%;
+} */
+#sec6-1,
+#sec6-2,
+#sec6-3,
+#sec6-4,
+#sec6-5,
+#sec6-6 {
+  /* position: absolute; */
+  right: 5%;
+}
+.sec-6-div .sec-6-bg {
+  position: absolute;
+  margin-top: -64%;
+  z-index: 8;
+}
+.sec-6-bg img {
+  width: full;
 }
