--- a/css/css.css
+++ b/css/css.css
@@ -598,7 +598,7 @@ html {
   }
 }
 /* progress bar */
-progress {
+/* progress {
   position: fixed;
   bottom: 0;
   left: 0;
@@ -635,6 +635,33 @@ progress::-moz-progress-bar {
     #ff6b01,
     #fc4236
   );
+  background-attachment: fixed;
+} */
+/* new progress bar */
+.progress-container {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  -webkit-appearance: none;
+  appearance: none;
+  width: 100%;
+  height: 5px;
+  border: none;
+  background: transparent;
+  z-index: 9999;
+}
+.progress-bar {
+  height: 5px;
+  background: linear-gradient(
+    to left,
+    #db38b5,
+    #01b3e3,
+    #25ce7b,
+    #fdc741,
+    #ff6b01,
+    #fc4236
+  );
+  width: 0%;
   background-attachment: fixed;
 }
 /* loader animation*/
