--- a/css/section3.css
+++ b/css/section3.css
@@ -3,29 +3,32 @@
   font-family: "Prompt", sans-serif;
 }
 
-body{
-    margin: auto;
+body {
+  margin: auto;
 }
 .sec-3 {
   background-image: url(/img/assets/c/c01_paper.png);
   background-color: #1e1e1e;
   height: 100vh;
   padding: 20px;
+  /* margin-top: -1px; */
+  background-size: cover;
 }
 .sec-3-click {
-    display: flex;
-    margin-top: 0;
-    margin-bottom: 0;
-    justify-content:center;
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+  justify-content: center;
 }
-.sec-3-click p{
-    position: absolute;
-    text-decoration: underline;
-    color: #fff;
+.sec-3-click p {
+  position: absolute;
+  text-decoration: underline;
+  color: #fff;
+  font-size: 1.098vw;
 }
-.shirt{
-    display: flex;
-    margin-top: 0;
+.shirt {
+  display: flex;
+  margin-top: 0;
 }
 .shirt-img-1 {
   margin: 150px 25%;
@@ -36,9 +39,9 @@ body{
   width: 21.94vw;
 }
 
-.shirt-img-2{
-    position: absolute;
-    margin: 130px 39%;   
+.shirt-img-2 {
+  position: absolute;
+  margin: 130px 39%;
 }
 .shirt-img-2 .shirt-2 {
   /* width: 300px; */
@@ -104,117 +107,167 @@ body{
   /* width: 300px; */
   width: 21.94vw;
 }
-.shirt-img-10{
-    margin: 320px 62%; 
-     position: absolute;
-     z-index: 2;
- }
- .shirt-img-10 .shirt-10{
-     width: 180px;
- }
-
+.shirt-img-10 {
+  margin: 320px 62%;
+  position: absolute;
+  z-index: 2;
+}
+.shirt-img-10 .shirt-10 {
+  /* width: 180px; */
+  width: 13.177vw;
+}
 
 .BornHS__Wrapper {
-    position: relative;
-    z-index: 10;
+  position: relative;
+  z-index: 10;
 }
-.BornHS__Modal__Input{
-    position: absolute;
+.BornHS__Modal__Input {
+  position: absolute;
 }
 .BornHS__Wrapper .BornHS__Close {
-    display: none;
+  display: none;
 }
 .BornHS__Wrapper .Content__Wrapper {
-    position: relative;
+  position: relative;
 }
 .BornHS__Wrapper .BornHS__Modal__Content {
-    background: #F49807;
-    border-radius: 5px;
-    box-shadow: 0 0 24px rgba(0, 0, 0, 0.22);
-    color: #fff;
-    opacity: 0;
-    transition: all 0.3s ease-in-out;
-    visibility: hidden;
-    width: 360px;
-    z-index: 10;
+  /* padding: 10px; */
+  padding: 0.732vw;
+  background: #f49807;
+  /* border-radius: 25px; */
+  border-radius: 1.83vw;
+  box-shadow: 0 0 24px rgba(0, 0, 0, 0.22);
+  color: #fff;
+  opacity: 0;
+  transition: all 0.3s ease-in-out;
+  visibility: hidden;
+  /* width: 240px; */
+  width: 17.57vw;
+  z-index: 10;
 }
 
 .BornHS__Modal__Content .Content__Wrapper {
-    padding: 10px;
+  padding: 10px;
 }
 .Content__Wrapper .BornHS__Title {
-    font-size: 20px;
-    line-height: 20px;
-    margin-top:10px;
-    text-align: center;
+  /* font-size: 20px;
+  line-height: 20px; */
+  font-size: 1.5vw;
+  line-height: 1.46vw;
+  margin-top: 10px;
+  text-align: center;
 }
 .Content__Wrapper p {
-    text-align: center;
-    font-size: 15px;
-    margin: 0;
-    padding: 0;
+  text-align: center;
+  /* font-size: 15px; */
+  font-size: 1.1vw;
+  margin: 0;
+  padding: 0;
 }
-
 
 .BornHS__Wrapper .BornHS__Input {
-    height: 0;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
-    text-indent: -9999px;
-    width: 0;
-    z-index: 6;
-    
+  height: 0;
+  opacity: 0;
+  overflow: hidden;
+  position: absolute;
+  text-indent: -9999px;
+  width: 0;
+  z-index: 6;
 }
 .BornHS__Wrapper .BornHS__Input + .BornHS__Label {
-    background: #F49807;
-    border-radius: 50%;
-    cursor: pointer;
-    height: 20px;
-    position: absolute;
-    transition: all 300ms ease;
-    width: 20px;
-    z-index: 8;    
+  background: #f49807;
+  border-radius: 50%;
+  cursor: pointer;
+  height: 20px;
+  position: absolute;
+  transition: all 300ms ease;
+  width: 20px;
+  z-index: 8;
 }
+.BornHS__Wrapper .BornHS__Input + .BornHS__Label:hover {
+  transform: scale(1.5);
+}
+
 @media (min-width: 768px) {
-    .BornHS__Wrapper .BornHS__Input + .BornHS__Label {
-        height: 30px;
-        width: 30px;
-   }
+  .BornHS__Wrapper .BornHS__Input + .BornHS__Label {
+    height: 30px;
+    width: 30px;
+  }
 }
-.BornHS__Wrapper .BornHS__Input + .BornHS__Label:before, .BornHS__Wrapper .BornHS__Input + .BornHS__Label:after {
-    background: #fff;
-    content: "";
-    cursor: pointer;
-    display: block;
-    left: 50%;
-    position: absolute;
-    top: 50%;
-    transform: translate(-50%, -50%);
+.BornHS__Wrapper .BornHS__Input + .BornHS__Label:before,
+.BornHS__Wrapper .BornHS__Input + .BornHS__Label:after {
+  background: #000;
+  content: "";
+  cursor: pointer;
+  display: block;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
 }
 .BornHS__Wrapper .BornHS__Input + .BornHS__Label:before {
-    height: 2px;
-    width: 40%;
+  height: 2px;
+  width: 40%;
 }
 .BornHS__Wrapper .BornHS__Input + .BornHS__Label:after {
-    height: 40%;
-    width: 2px;
+  height: 40%;
+  width: 2px;
 }
 .BornHS__Wrapper .BornHS__Input ~ .BornHS__Overlay {
-    display: none;
-    height: 100%;
-    left: 0;
-    position: absolute;
-    width: 100%;
-    top: 0;
-    z-index: 7;
+  display: none;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  z-index: 7;
 }
 .BornHS__Wrapper .BornHS__Input:checked + .BornHS__Label {
-    transform: rotate(45deg);
+  transform: rotate(45deg);
 }
 .BornHS__Wrapper .BornHS__Input:checked ~ .BornHS__Modal__Content {
-    opacity: 1;
-    visibility: visible;
+  opacity: 1;
+  visibility: visible;
 }
 
-
+@media only screen and (min-width: 1366px) {
+  .BornHS__Wrapper .BornHS__Input + .BornHS__Label {
+    height: 2.196vw;
+    width: 2.196vw;
+  }
+}
+.BornHS__Wrapper .BornHS__Input + .BornHS__Label:before,
+.BornHS__Wrapper .BornHS__Input + .BornHS__Label:after {
+  background: #fff;
+  content: "";
+  cursor: pointer;
+  display: block;
+  left: 50%;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+.BornHS__Wrapper .BornHS__Input + .BornHS__Label:before {
+  height: 0.146vw;
+  width: 40%;
+}
+.BornHS__Wrapper .BornHS__Input + .BornHS__Label:after {
+  height: 40%;
+  width: 0.146vw;
+}
+.BornHS__Wrapper .BornHS__Input ~ .BornHS__Overlay {
+  display: none;
+  height: 100%;
+  left: 0;
+  position: absolute;
+  width: 100%;
+  top: 0;
+  z-index: 7;
+}
+.BornHS__Wrapper .BornHS__Input:checked + .BornHS__Label {
+  transform: rotate(45deg);
+}
+.BornHS__Wrapper .BornHS__Input:checked ~ .BornHS__Modal__Content {
+  opacity: 1;
+  visibility: visible;
+}
