--- a/css/footer.css
+++ b/css/footer.css
@@ -1,21 +1,23 @@
-@import url('https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Prompt:wght@300;400;500;600&display=swap");
 
 * {
-    font-family: 'Prompt', sans-serif;
-
+  font-family: "Prompt", sans-serif;
 }
 
 body {
-    margin: 0;
+  margin: 0;
 }
 
-.footer{
-    padding: 5px 0;
-    background-color: #272727;
+.footer {
+  /* padding: 5px 0; */
+  padding: 0.586vw 0;
+  background-color: #272727;
 }
-.footer p{
-    margin: 0;
-    color: #FFFFFF;
-    font-size: 20px;
-    text-align: center;
+.footer p {
+  margin: 0;
+  color: #ffffff;
+  /* font-size: 16px; */
+  font-size: 1.171vw;
+  text-align: center;
+  font-weight: 300;
 }
