--- a/css/section9.css
+++ b/css/section9.css
@@ -16,15 +16,18 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  padding-top: 20px;
+  /* padding-top: 20px; */
+  padding-top: 1.464vw;
 }
 
 .sec-9-title1 p {
   color: #1e1e1e;
-  font-size: 160px;
+  /* font-size: 160px; */
+  font-size: 11.713vw;
   padding-top: 0;
   margin-bottom: 0;
-  line-height: 140px;
+  /* line-height: 140px; */
+  line-height: 10.249vw;
   text-align: center;
   font-weight: 800;
   text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000,
@@ -32,9 +35,11 @@ body {
 }
 .sec-9-title2 p {
   color: #1e1e1e;
-  font-size: 100px;
+  /* font-size: 100px; */
+  font-size: 7.321vw;
   margin: 30px 0;
-  line-height: 80px;
+  /* line-height: 80px; */
+  line-height: 5.857vw;
   text-align: center;
   font-weight: 800;
   text-shadow: -1px 1px 0 #000, 1px 1px 0 #000, 1px -1px 0 #000,
@@ -45,7 +50,8 @@ body {
   text-align: center;
 }
 .sec-9-hover p {
-  font-size: 15px;
+  /* font-size: 15px; */
+  font-size: 1.098vw;
   text-decoration: underline;
 }
 
@@ -57,17 +63,20 @@ body {
 }
 
 .card-group {
-  width: 250px;
+  /* width: 250px; */
+  width: 18.302vw;
   position: relative;
   overflow: hidden;
-  margin: 0 50px;
+  /* margin: 0 50px; */
+  margin: 0 3.4vw;
   transition-duration: 0.4s;
   cursor: pointer;
 }
 
 .front {
   display: block;
-  width: 250px;
+  /* width: 250px; */
+  width: 18.302vw;
   height: auto;
 }
 
@@ -78,7 +87,8 @@ body {
   left: 0;
   right: 0;
   overflow: hidden;
-  width: 250px;
+  /* width: 250px; */
+  width: 18.302vw;
   height: 100%;
   transform: translateY(60%);
   transition: all 0.8s ease-in-out;
@@ -88,7 +98,8 @@ body {
   position: absolute;
   left: 0;
   bottom: 0;
-  width: 250px;
+  /* width: 250px; */
+  width: 18.302vw;
 }
 
 .overlay img {
