--- a/css/css.css
+++ b/css/css.css
@@ -27,7 +27,7 @@ html {
   scroll-behavior: smooth;
 }
 .navbar {
-  margin: 5px;
+  margin: 0 5px;
   position: -webkit-sticky;
   position: sticky;
   top: 5px;
@@ -58,14 +58,17 @@ html {
   border: none;
 }
 .icon svg {
-  width: 25px;
+  /* width: 25px; */
+  width: 1.83vw;
   fill: #111;
 }
 .icon svg:hover {
   fill: #818181;
 }
+
 .slide_nav {
-  height: 230px;
+  /* height: 230px; */
+  height: 16.837vw;
   width: 0;
   position: absolute;
   z-index: 1;
@@ -73,20 +76,24 @@ html {
   /* background-color: #ACACAC;
      */
   overflow: hidden;
-  padding-top: 60px;
+  /* padding-top: 60px; */
+  padding-top: 4.392vw;
   transition: 0.5s;
   top: 0;
   /* From https://css.glass */
   background: rgba(255, 255, 255, 0.73);
-  border-radius: 16px;
+  /* border-radius: 16px; */
+  border-radius: 1.171vw;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(6px);
   -webkit-backdrop-filter: blur(6px);
 }
 .slide_nav .list {
-  padding: 8px 8px 8px 32px;
+  /* padding: 8px 8px 8px 32px; */
+  padding: 0.586vw 0.586vw 0.586vw 2.336vw;
   text-decoration: none;
-  font-size: 16px;
+  /* font-size: 16px; */
+  font-size: 1.171vw;
   color: #111;
   display: block;
   font-weight: 500;
@@ -94,24 +101,29 @@ html {
 }
 .slide_nav .list:hover {
   background-color: #ffffffa2;
-  font-size: 20px;
+  /* font-size: 20px; */
+  font-size: 1.464vw;
 }
 .slide_nav .closebtn {
   text-decoration: none;
-  font-size: 45px;
+  /* font-size: 45px; */
+  font-size: 3.294vw;
   color: #818181;
   display: block;
   transition: 0.3s;
   position: absolute;
   top: 0;
   right: 0%;
-  height: 45px;
+  /* height: 45px; */
+  height: 3.294vw;
 }
 .closebtn svg {
   fill: #111;
   top: 0;
-  width: 40px;
-  height: 40px;
+  /* width: 40px;
+  height: 40px; */
+  width: 2.928vw;
+  height: 2.928vw;
 }
 .closebtn svg:hover {
   fill: #818181;
@@ -401,6 +413,7 @@ html {
     background-size: contain;
     margin: 18vh 0 18vh 0;
   }
+
   .cover {
     /* min-height: 768px;
          */
@@ -597,6 +610,10 @@ html {
     width: 100vw;
   }
 }
+
+/* --------DELL-------- */
+@media only screen and (min-width: 3840px) {
+}
 /* progress bar */
 /* progress {
   position: fixed;
@@ -645,13 +662,13 @@ progress::-moz-progress-bar {
   -webkit-appearance: none;
   appearance: none;
   width: 100%;
-  height: 5px;
+  height: 0.586vw;
   border: none;
   background: transparent;
   z-index: 9999;
 }
 .progress-bar {
-  height: 5px;
+  height: 0.586vw;
   background: linear-gradient(
     to left,
     #db38b5,
