--- a/css/section3.css
+++ b/css/section3.css
@@ -11,7 +11,7 @@ body {
   background-color: #1e1e1e;
   height: 100vh;
   padding: 20px;
-  /* margin-top: -1px; */
+  margin-top: -3px;
   background-size: cover;
 }
 .sec-3-click {
